--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>Hello Doston</h1>
     <p>this is my first paragraph</p>
-    <p style="color: green">we have added a new feature in feature1 branch</p>
+    <p style="color: green">we have added a new feature in feature1 branch(add dropdown)</p>
   </body>
 </html>
